--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "check": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json",
     "watch": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json --watch",
     "lint": "eslint . --fix",
+    "postinstall": "bun run check",
     "typecheck": "tsc --noEmit"
   },
   "dependencies": {
