add: extension recs

--- a/.vscode/extensions.json
+++ b/.vscode/extensions.json
@@ -1,5 +1,9 @@
 {
   "recommendations": [
-
+    "antfu.unocss",
+    "antfu.iconify",
+    "svelte.svelte-vscode",
+    "dbaeumer.vscode-eslint",
+    "YoavBls.pretty-ts-errors"
   ]
 }
