fix: theme stuck on neutral

--- a/package.json
+++ b/package.json
@@ -11,8 +11,8 @@
     "check": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json",
     "watch": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json --watch",
     "lint": "eslint . --fix",
-    "postinstall": "bun run check",
-    "typecheck": "tsc --noEmit"
+    "typecheck": "tsc --noEmit",
+    "postinstall": "bun run check"
   },
   "dependencies": {
     "@unocss/reset": "^0.61.5",
