--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "postinstall": "bun run check"
   },
   "dependencies": {
+    "@fontsource-variable/league-spartan": "^5.0.20",
     "@unocss/reset": "^0.61.5",
     "bits-ui": "^0.21.12",
     "clsx": "^2.1.1",
