--- a/package.json
+++ b/package.json
@@ -10,9 +10,9 @@
     "preview": "bunx --bun vite preview",
     "check": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json",
     "watch": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json --watch",
+    "gen:types": "bun run scripts/generateTypes.ts && bun run lint",
     "lint": "eslint . --fix",
-    "typecheck": "tsc --noEmit",
-    "postinstall": "bun run check"
+    "typecheck": "tsc --noEmit"
   },
   "dependencies": {
     "@fontsource-variable/league-spartan": "^5.0.20",
@@ -32,6 +32,7 @@
     "@unocss/eslint-plugin": "^0.61.5",
     "@unocss/extractor-svelte": "^0.61.5",
     "eslint-plugin-svelte": "^2.43.0",
+    "supabase": "^1.187.8",
     "svelte": "^5.0.0-next.199",
     "svelte-check": "^3.8.4",
     "typescript": "^5.5.4",
