--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   },
   "dependencies": {
     "@fontsource-variable/league-spartan": "^5.0.20",
+    "@supabase/supabase-js": "^2.45.0",
     "@unocss/reset": "^0.61.5",
     "bits-ui": "^0.21.12",
     "clsx": "^2.1.1",
@@ -32,7 +33,7 @@
     "@unocss/eslint-plugin": "^0.61.5",
     "@unocss/extractor-svelte": "^0.61.5",
     "eslint-plugin-svelte": "^2.43.0",
-    "supabase": "^1.187.8",
+    "supabase": "^1.187.10",
     "svelte": "^5.0.0-next.199",
     "svelte-check": "^3.8.4",
     "typescript": "^5.5.4",
